# Bettencourt-POS

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DEMO-CREDENTIALS.md  DEPLOYMENT-CHANGES.md  Dockerfile  POS_V3_PLAN.md  README.md  biome.json  bts.jsonc  docker-compose.prod.env.example  docker-compose.prod.yml  package.json  skills-lock.json  tsconfig.json  turbo.json
.claude/: settings.json
.claude/commands/: update-manual.md
.claude/hooks/: post-commit-docs.sh
.codex/: config.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  desktop-build.yml  setup-signing.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/fumadocs/: package.json  react-router.config.ts  tsconfig.json  vite.config.ts
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/web/: package.json  tsconfig.json  vite.config.ts
docs/: DEVELOPER.md  HANDOVER.md  PERFORMANCE.md  PRODUCTION-MIGRATION.md  PROGRESS.md  USER-MANUAL.md  handover.html  user-manual-combined.md  user-manual.html
docs/audits/: 2026-03-07-codebase-audit-handoff.md  2026-03-08-comprehensive-audit-handoff-v2.md  2026-03-09-finance-plan-gap-and-ux-handoff.md  2026-03-10-full-reconciliation-pass.md  2026-03-28-comprehensive-code-audit.md  2026-04-19-production-audit.md
docs/plans/: 2026-03-05-feature-buildout-design.md  2026-03-05-plan2-feature-buildout-design.md  (+33 more)
scripts/: install-qz-cert.bat
(+223 files in other folders)
